# canmic

./: .gitignore  CMakeLists.txt  README.md  main.cc
include/: strdef.hh
tests/: kasumi-hinsi_codes-37.u8  kasumi-hinsi_codes-37_out.txt  w10-ime-tango-kq0.606-utf8-crlf.txt  w10-ime-tango-kq0.606-utf8-crlf.txt_out.u8  w10-ime-tango-kq0.606.txt
